--- a/MinhDuyPrivate/public/admin/css/style.css
+++ b/MinhDuyPrivate/public/admin/css/style.css
@@ -842,7 +842,8 @@ ul.setting-panel-list li{
     margin: 0;
 	width: 180px;
 	right: 0px;
-	transition: .5s ease-out;
+    transition: .5s ease-out;
+    display: none;
 }
 .sr-input-func a {
     position: absolute;
@@ -4737,6 +4738,30 @@ div#sparklinehome canvas {
 	color:#fff;
 	text-decoration:none;
 }
+.status-product{
+    height: 2.3rem;
+    border-radius: 20px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+.status-product--1{
+    border:1px solid rgb(13, 175, 13);
+    background-color: rgb(13, 175, 13);
+    color:#fff;
+}
+.status-product--2{
+    border:1px solid rgb(143, 2, 2);
+    background-color: rgb(143, 2, 2);
+    color:#fff;
+}
+.status-product--3{
+    border:1px solid rgb(236, 201, 3);
+    background-color: rgb(236, 201, 3);
+    color:#000;
+}
 /*----------------------------------------*/
 /*  24. css for list admin
 /*----------------------------------------*/
@@ -4765,3 +4790,5 @@ div#sparklinehome canvas {
         margin-left: 209px;
     }
 }
+
+
